# hackathon-oracle

./: Cargo.toml  README.md
oracle/: Cargo.toml
oracle/src/: lib.rs
price/: Cargo.toml
price/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  oracle.rs  oracle_test.rs
scripts/: package.json
scripts/reporters/: binance.js  bitstamp.js  coinbase_pro.js
