[package]
name = "oracle"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

rstd = { package = "sr-std", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
runtime-io = { package = "sr-io", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
support = { package = "srml-support", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
primitives = { package = "substrate-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
balances = { package = "srml-balances", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
indices = { package = "srml-indices", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
system = { package = "srml-system", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
timestamp = { package = "srml-timestamp", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
sr-primitives = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"safe-mix/std",
]

no_std = []
