[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

rstd = { package = "sr-std", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
runtime-io = { package = "sr-io", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
version = { package = "sr-version", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
support = { package = "srml-support", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
primitives = { package = "substrate-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
substrate-session = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
balances = { package = "srml-balances", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
babe = { package = "srml-babe", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
executive = { package = "srml-executive", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
indices = { package = "srml-indices", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
grandpa = { package = "srml-grandpa", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "srml-system", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
timestamp = { package = "srml-timestamp", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
sudo = { package = "srml-sudo", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
sr-primitives = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
client = { package = "substrate-client", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
collective = { package = "srml-collective", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }

oracle = { path = "../oracle", default_features = false }
price = { path = "../price", default_features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"collective/std",
	"oracle/std",
	"price/std",
]

no_std = []
